--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
 </nav>
 
 <div class="content">
-    <h2>首页</h2>
-    <p>pixelart 主页</p>
+    <h2>关于我们</h2>
+    <p>pixelart 一家创建与2023年的公司</p>
+</div>
+    <div class="content">
+    <h2>我们的产品</h2>
+    <p>正在创作冒险之路</p>
 </div>
 
 <footer>
