--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
 
 <div class="content">
     <h2>关于我们</h2>
-    <p>pixelart 一家创建与2023年的公司</p>
+    <p>pixelart 一家创建于2023年的公司</p>
 </div>
     <div class="content">
     <h2>我们的产品</h2>
     <p>正在创作冒险之路</p>
 </div>
 
+<div class="content">
+    <h2>人员</h2>
+    <p>KAG laohei PG</p>
+</div>
 <footer>
     <p>&copy; 2024 pixelart版权所有</p>
 </footer>
